--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -3,6 +3,6 @@
         //Nao ira compilar se houver erros
         "noEmitOnError": false,
         //Saida dos arquivos
-        "outDir": "compilados"
+        //"outDir": "compilados"
     }
 }
